[gd_scene load_steps=32 format=2]

[ext_resource path="res://Assets/Art/Player/JumpEffect1.png" type="Texture" id=1]
[ext_resource path="res://Assets/Art/Player/JumpEffect3.png" type="Texture" id=2]
[ext_resource path="res://Assets/Art/Player/JumpEffect2.png" type="Texture" id=3]
[ext_resource path="res://Scenes/AutoLoads/PlayerMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Art/Envirement/BasicLight.png" type="Texture" id=5]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=6]
[ext_resource path="res://Assets/Sounds/cavewalk.mp3" type="AudioStream" id=7]
[ext_resource path="res://Scripts/ResourceManager.gd" type="Script" id=8]
[ext_resource path="res://Assets/Fonts/Silver.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://Assets/Art/UI/Button01.png" type="Texture" id=10]
[ext_resource path="res://Assets/Art/UI/Button01-pressed.png" type="Texture" id=11]
[ext_resource path="res://Scripts/SaveManager.gd" type="Script" id=12]
[ext_resource path="res://Scenes/AutoLoads/SpeedRunTimer.tscn" type="PackedScene" id=13]
[ext_resource path="res://Assets/Art/UI/vignette.png" type="Texture" id=14]
[ext_resource path="res://Assets/MainTheme.tres" type="Theme" id=15]
[ext_resource path="res://Assets/Sounds/jumpsound.mp3" type="AudioStream" id=24]
[ext_resource path="res://Assets/Animations/PlayerAnimSprite.tres" type="SpriteFrames" id=30]

[sub_resource type="DynamicFont" id=8]
outline_color = Color( 0.0705882, 0.0705882, 0.0705882, 1 )
font_data = ExtResource( 9 )

[sub_resource type="Theme" id=9]
default_font = SubResource( 8 )

[sub_resource type="StyleBoxTexture" id=20]
texture = ExtResource( 14 )
region_rect = Rect2( 0, 0, 1800, 1200 )

[sub_resource type="Animation" id=21]
resource_name = "EndGame"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=22]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="SpriteFrames" id=19]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 3 ), ExtResource( 2 ), null ],
"loop": false,
"name": "jumpeffect",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 12, 1.375 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 9, 15.5 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 8, 14.5 )

[sub_resource type="Animation" id=12]
resource_name = "Fall"
length = 0.3
loop = true

[sub_resource type="Animation" id=10]
resource_name = "Idle"
length = 3.0
loop = true

[sub_resource type="Animation" id=13]
resource_name = "Jump"
length = 0.3
loop = true

[sub_resource type="Animation" id=11]
length = 0.001

[sub_resource type="Animation" id=14]
resource_name = "Run"
length = 0.5
loop = true
step = 0.06

[node name="Player" type="KinematicBody2D"]
z_index = 4
script = ExtResource( 6 )
jump_force = 550

[node name="GUI" type="CanvasLayer" parent="."]

[node name="SpeedRunTimer" parent="GUI" instance=ExtResource( 13 )]
pause_mode = 2

[node name="PlayerUI" type="Control" parent="GUI"]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="DebugPanel" type="Panel" parent="GUI/PlayerUI"]
margin_left = -305.0
margin_top = -284.0
margin_right = -151.0
margin_bottom = -219.0
rect_scale = Vector2( 0.796197, 0.762438 )

[node name="AddCoin" type="TextureButton" parent="GUI/PlayerUI/DebugPanel"]
margin_left = 3.0
margin_right = 75.0
margin_bottom = 40.0
theme = SubResource( 9 )
action_mode = 0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 11 )
expand = true

[node name="RichTextLabel" type="RichTextLabel" parent="GUI/PlayerUI/DebugPanel/AddCoin"]
anchor_right = 0.556
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 11.0
margin_right = 12.968
margin_bottom = -14.0
mouse_filter = 2
text = "+1 Coin"
scroll_active = false

[node name="SaveGame" type="TextureButton" parent="GUI/PlayerUI/DebugPanel"]
margin_left = 78.0
margin_right = 150.0
margin_bottom = 40.0
theme = SubResource( 9 )
action_mode = 0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 11 )
expand = true

[node name="RichTextLabel" type="RichTextLabel" parent="GUI/PlayerUI/DebugPanel/SaveGame"]
anchor_right = 0.556
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 11.0
margin_right = 20.968
margin_bottom = -14.0
mouse_filter = 2
text = "Save Game"
scroll_active = false

[node name="LoadGame" type="TextureButton" parent="GUI/PlayerUI/DebugPanel"]
margin_left = 78.0
margin_top = 24.0
margin_right = 150.0
margin_bottom = 64.0
theme = SubResource( 9 )
action_mode = 0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 11 )
expand = true

[node name="RichTextLabel" type="RichTextLabel" parent="GUI/PlayerUI/DebugPanel/LoadGame"]
anchor_right = 0.556
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 11.0
margin_right = 20.968
margin_bottom = -14.0
mouse_filter = 2
text = "Load Game"
scroll_active = false

[node name="PauseMenu" parent="GUI" instance=ExtResource( 4 )]
visible = false

[node name="Vinet" type="Control" parent="GUI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -2.0
margin_bottom = -2.0
mouse_filter = 2

[node name="Panel" type="Panel" parent="GUI/Vinet"]
modulate = Color( 1, 1, 1, 0.45098 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 7.0
margin_bottom = 5.0
mouse_filter = 2
custom_styles/panel = SubResource( 20 )

[node name="Overlay" type="Control" parent="GUI"]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="Panel" type="Panel" parent="GUI/Overlay"]
margin_right = 1027.0
margin_bottom = 600.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="GUI/Overlay/Panel"]
playback_speed = 1.2
anims/EndGame = SubResource( 21 )
anims/RESET = SubResource( 22 )

[node name="SaveManager" type="Node" parent="."]
script = ExtResource( 12 )

[node name="ResourceManager" type="Node" parent="."]
script = ExtResource( 8 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -15 )
scale = Vector2( 1.5, 1.5 )
frames = ExtResource( 30 )
frame = 4
speed_scale = 3.5

[node name="Effects" type="AnimatedSprite" parent="."]
position = Vector2( 0, -5 )
scale = Vector2( 0.860989, 0.658245 )
frames = SubResource( 19 )
animation = "jumpeffect"
speed_scale = 2.0

[node name="OnGroundArea" type="Area2D" parent="."]
scale = Vector2( 1.65715, 0.922804 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="OnGroundArea"]
position = Vector2( 0, 1.625 )
shape = SubResource( 16 )

[node name="InteractionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
position = Vector2( 0, -15.5 )
shape = SubResource( 18 )

[node name="PlayerCollider" type="CollisionShape2D" parent="."]
position = Vector2( 0, -14.5 )
shape = SubResource( 17 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Fall = SubResource( 12 )
anims/Idle = SubResource( 10 )
anims/Jump = SubResource( 13 )
anims/RESET = SubResource( 11 )
anims/Run = SubResource( 14 )

[node name="FollowCamera" type="Camera2D" parent="."]
visible = false
position = Vector2( -3, -110 )
zoom = Vector2( 0.6, 0.6 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 1, -11 )
scale = Vector2( 3.46667, 3.72222 )
texture = ExtResource( 5 )
texture_scale = 0.35
energy = 1.02

[node name="Sounds" type="Node" parent="."]

[node name="CaveWalking" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 7 )
volume_db = -15.0
pitch_scale = 0.71
mix_target = 1

[node name="Jumping" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 24 )
volume_db = -15.0
mix_target = 1

[node name="talk" type="Label" parent="."]
margin_left = -66.0
margin_top = -99.0
margin_right = 73.0
margin_bottom = 18.0
rect_scale = Vector2( 0.555904, 0.555763 )
theme = ExtResource( 15 )
text = "yo"
align = 1
valign = 1
autowrap = true

[connection signal="pressed" from="GUI/PlayerUI/DebugPanel/AddCoin" to="ResourceManager" method="_on_AddCoin_pressed"]
[connection signal="pressed" from="GUI/PlayerUI/DebugPanel/SaveGame" to="SaveManager" method="_on_SaveGame_pressed"]
[connection signal="pressed" from="GUI/PlayerUI/DebugPanel/LoadGame" to="SaveManager" method="_on_LoadGame_pressed"]
[connection signal="animation_finished" from="GUI/Overlay/Panel/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="OnGroundArea" to="." method="_on_OnGroundArea_area_entered"]
[connection signal="body_entered" from="OnGroundArea" to="." method="_on_OnGroundArea_body_entered"]
[connection signal="body_exited" from="OnGroundArea" to="." method="_on_OnGroundArea_body_exited"]
[connection signal="area_entered" from="InteractionArea" to="." method="_on_InteractionArea_area_entered"]
[connection signal="body_entered" from="InteractionArea" to="." method="_on_InteractionArea_body_entered"]
